plugins/binding/capi/include/TellusimCMath.h

/*****************************************************************************\
 *
 * Scalars
 *
\*****************************************************************************/

/*
 */
TS_CAPI uint16_t TS_CCALL ts_f32tof16(float32_t f);
TS_CAPI float32_t TS_CCALL ts_f16tof32(uint16_t h);
TS_CAPI uint32_t TS_CCALL ts_f32tof21(float32_t f);
TS_CAPI float32_t TS_CCALL ts_f21tof32(uint32_t h);
TS_CAPI uint32_t TS_CCALL ts_f32tof24(float32_t f);
TS_CAPI float32_t TS_CCALL ts_f24tof32(uint32_t h);
/*****************************************************************************\
 *
 * Vector2
 *
\*****************************************************************************/

/*
 */
typedef struct TSVector2i {
	union {
		struct {
			int32_t x, y;
		};
		int32_t v[2];
	};
} TSVector2i;
TS_CAPI TSVector2i* TS_CCALL tsVector2i_abs(TSVector2i *ret, const TSVector2i *v);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_neg(TSVector2i *ret, const TSVector2i *v);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_mul1(TSVector2i *ret, const TSVector2i *v0, int32_t v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_div1(TSVector2i *ret, const TSVector2i *v0, int32_t v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_add1(TSVector2i *ret, const TSVector2i *v0, int32_t v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_sub1(TSVector2i *ret, const TSVector2i *v0, int32_t v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_and1(TSVector2i *ret, const TSVector2i *v0, int32_t v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_or1(TSVector2i *ret, const TSVector2i *v0, int32_t v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_xor1(TSVector2i *ret, const TSVector2i *v0, int32_t v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_shl1(TSVector2i *ret, const TSVector2i *v0, int32_t v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_shr1(TSVector2i *ret, const TSVector2i *v0, int32_t v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_mul(TSVector2i *ret, const TSVector2i *v0, const TSVector2i *v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_div(TSVector2i *ret, const TSVector2i *v0, const TSVector2i *v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_add(TSVector2i *ret, const TSVector2i *v0, const TSVector2i *v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_sub(TSVector2i *ret, const TSVector2i *v0, const TSVector2i *v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_and(TSVector2i *ret, const TSVector2i *v0, const TSVector2i *v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_or(TSVector2i *ret, const TSVector2i *v0, const TSVector2i *v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_xor(TSVector2i *ret, const TSVector2i *v0, const TSVector2i *v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_min(TSVector2i *ret, const TSVector2i *v0, const TSVector2i *v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_max(TSVector2i *ret, const TSVector2i *v0, const TSVector2i *v1);
TS_CAPI TSVector2i* TS_CCALL tsVector2i_clamp(TSVector2i *ret, const TSVector2i *v, const TSVector2i *v0, const TSVector2i *v1);