plugins/binding/rust/source/TellusimRSMath.rs

// Copyright (C) 2018-2026, Tellusim Technologies Inc. All rights reserved
// https://tellusim.com/

use std::fmt;
use std::ops;

pub use crate::base::*;

/*****************************************************************************\
 *
 * Scalars
 *
\*****************************************************************************/

/* 32-bit signed integer numbers
 */
pub fn min3i32(v0: i32, v1: i32, v2: i32) -> i32 { if v0 < v1 { i32::min(v0, v2) } else { i32::min(v1, v2) } }
pub fn max3i32(v0: i32, v1: i32, v2: i32) -> i32 { if v0 < v1 { i32::max(v1, v2) } else { i32::max(v0, v2) } }
pub fn min4i32(v0: i32, v1: i32, v2: i32, v3: i32) -> i32 { if v0 < v1 { min3i32(v0, v2, v3) } else { min3i32(v1, v2, v3) } }
pub fn max4i32(v0: i32, v1: i32, v2: i32, v3: i32) -> i32 { if v0 < v1 { max3i32(v1, v2, v3) } else { max3i32(v0, v2, v3) } }
pub fn midi32(v0: i32, v1: i32, v2: i32) -> i32 { if v0 < v1 { if v1 < v2 { v1 } else { i32::max(v0, v2) } } else { if v0 < v2 { v0 } else { i32::max(v1, v2) } } }
pub fn clampi32(v: i32, v0: i32, v1: i32) -> i32 { i32::min(i32::max(v, v0), v1) }

/* 64-bit signed integer numbers
 */
pub fn min3i64(v0: i64, v1: i64, v2: i64) -> i64 { if v0 < v1 { i64::min(v0, v2) } else { i64::min(v1, v2) } }
pub fn max3i64(v0: i64, v1: i64, v2: i64) -> i64 { if v0 < v1 { i64::max(v1, v2) } else { i64::max(v0, v2) } }
pub fn min4i64(v0: i64, v1: i64, v2: i64, v3: i64) -> i64 { if v0 < v1 { min3i64(v0, v2, v3) } else { min3i64(v1, v2, v3) } }
pub fn max4i64(v0: i64, v1: i64, v2: i64, v3: i64) -> i64 { if v0 < v1 { max3i64(v1, v2, v3) } else { max3i64(v0, v2, v3) } }
pub fn midi64(v0: i64, v1: i64, v2: i64) -> i64 { if v0 < v1 { if v1 < v2 { v1 } else { i64::max(v0, v2) } } else { if v0 < v2 { v0 } else { i64::max(v1, v2) } } }
pub fn clampi64(v: i64, v0: i64, v1: i64) -> i64 { i64::min(i64::max(v, v0), v1) }

/* 32-bit unsigned integer numbers
 */
pub fn ispotu32(x: u32) -> bool { (x & (x - 1)) == 0 }
pub fn isalignedu32(a: u32, b: u32) -> bool { if ispotu32(b) { (a & (b - 1)) == 0 } else { (a / b) * b == a } }
pub fn npotu32(x: u32) -> u32 { let mut ret: u32 = 1; while ret < x { ret += ret } ret }
pub fn alignu32(a: u32, b: u32) -> u32 { if ispotu32(b) { (a + b - 1) & !(b - 1) } else { ((a + b - 1) / b) * b } }
pub fn udivu32(a: u32, b: u32) -> u32 { (a + b - 1) / b }

pub fn min3u32(v0: u32, v1: u32, v2: u32) -> u32 { if v0 < v1 { u32::min(v0, v2) } else { u32::min(v1, v2) } }
pub fn max3u32(v0: u32, v1: u32, v2: u32) -> u32 { if v0 < v1 { u32::max(v1, v2) } else { u32::max(v0, v2) } }
pub fn min4u32(v0: u32, v1: u32, v2: u32, v3: u32) -> u32 { if v0 < v1 { min3u32(v0, v2, v3) } else { min3u32(v1, v2, v3) } }
pub fn max4u32(v0: u32, v1: u32, v2: u32, v3: u32) -> u32 { if v0 < v1 { max3u32(v1, v2, v3) } else { max3u32(v0, v2, v3) } }
pub fn midu32(v0: u32, v1: u32, v2: u32) -> u32 { if v0 < v1 { if v1 < v2 { v1 } else { u32::max(v0, v2) } } else { if v0 < v2 { v0 } else { u32::max(v1, v2) } } }
pub fn clampu32(v: u32, v0: u32, v1: u32) -> u32 { u32::min(u32::max(v, v0), v1) }

/* 64-bit unsigned integer numbers
 */
pub fn ispotu64(x: u64) -> bool { (x & (x - 1)) == 0 }
pub fn isalignedu64(a: u64, b: u64) -> bool { if ispotu64(b) { (a & (b - 1)) == 0 } else { (a / b) * b == a } }
pub fn npotu64(x: u64) -> u64 { let mut ret: u64 = 1; while ret < x { ret += ret } ret }
pub fn alignu64(a: u64, b: u64) -> u64 { if ispotu64(b) { (a + b - 1) & !(b - 1) } else { ((a + b - 1) / b) * b } }
pub fn udivu64(a: u64, b: u64) -> u64 { (a + b - 1) / b }

pub fn min3u64(v0: u64, v1: u64, v2: u64) -> u64 { if v0 < v1 { u64::min(v0, v2) } else { u64::min(v1, v2) } }
pub fn max3u64(v0: u64, v1: u64, v2: u64) -> u64 { if v0 < v1 { u64::max(v1, v2) } else { u64::max(v0, v2) } }
pub fn min4u64(v0: u64, v1: u64, v2: u64, v3: u64) -> u64 { if v0 < v1 { min3u64(v0, v2, v3) } else { min3u64(v1, v2, v3) } }
pub fn max4u64(v0: u64, v1: u64, v2: u64, v3: u64) -> u64 { if v0 < v1 { max3u64(v1, v2, v3) } else { max3u64(v0, v2, v3) } }
pub fn midu64(v0: u64, v1: u64, v2: u64) -> u64 { if v0 < v1 { if v1 < v2 { v1 } else { u64::max(v0, v2) } } else { if v0 < v2 { v0 } else { u64::max(v1, v2) } } }
pub fn clampu64(v: u64, v0: u64, v1: u64) -> u64 { u64::min(u64::max(v, v0), v1) }

/* 32-bit floating point numbers
 */
pub fn min3f32(v0: f32, v1: f32, v2: f32) -> f32 { if v0 < v1 { f32::min(v0, v2) } else { f32::min(v1, v2) } }
pub fn max3f32(v0: f32, v1: f32, v2: f32) -> f32 { if v0 < v1 { f32::max(v1, v2) } else { f32::max(v0, v2) } }
pub fn min4f32(v0: f32, v1: f32, v2: f32, v3: f32) -> f32 { if v0 < v1 { min3f32(v0, v2, v3) } else { min3f32(v1, v2, v3) } }
pub fn max4f32(v0: f32, v1: f32, v2: f32, v3: f32) -> f32 { if v0 < v1 { max3f32(v1, v2, v3) } else { max3f32(v0, v2, v3) } }
pub fn midf32(v0: f32, v1: f32, v2: f32) -> f32 { if v0 < v1 { if v1 < v2 { v1 } else { f32::max(v0, v2) } } else { if v0 < v2 { v0 } else { f32::max(v1, v2) } } }
pub fn clampf32(v: f32, v0: f32, v1: f32) -> f32 { f32::min(f32::max(v, v0), v1) }
pub fn saturatef32(v: f32) -> f32 { f32::min(f32::max(v, 0.0), 1.0) }

pub fn lerpf32(v0: f32, v1: f32, k: f32) -> f32 { v0 + (v1 - v0) * k }

/* 64-bit floating point numbers
 */
pub fn min3f64(v0: f64, v1: f64, v2: f64) -> f64 { if v0 < v1 { f64::min(v0, v2) } else { f64::min(v1, v2) } }
pub fn max3f64(v0: f64, v1: f64, v2: f64) -> f64 { if v0 < v1 { f64::max(v1, v2) } else { f64::max(v0, v2) } }
pub fn min4f64(v0: f64, v1: f64, v2: f64, v3: f64) -> f64 { if v0 < v1 { min3f64(v0, v2, v3) } else { min3f64(v1, v2, v3) } }
pub fn max4f64(v0: f64, v1: f64, v2: f64, v3: f64) -> f64 { if v0 < v1 { max3f64(v1, v2, v3) } else { max3f64(v0, v2, v3) } }
pub fn midf64(v0: f64, v1: f64, v2: f64) -> f64 { if v0 < v1 { if v1 < v2 { v1 } else { f64::max(v0, v2) } } else { if v0 < v2 { v0 } else { f64::max(v1, v2) } } }
pub fn clampf64(v: f64, v0: f64, v1: f64) -> f64 { f64::min(f64::max(v, v0), v1) }
pub fn saturatef64(v: f64) -> f64 { f64::min(f64::max(v, 0.0), 1.0) }

pub fn lerpf64(v0: f64, v1: f64, k: f64) -> f64 { v0 + (v1 - v0) * k }

/* packed floating point numbers
 */
pub fn f32tof16(f: f32) -> u16 { unsafe { ts_f32tof16(f) } }
pub fn f16tof32(h: u16) -> f32 { unsafe { ts_f16tof32(h) } }
pub fn f32tof21(f: f32) -> u32 { unsafe { ts_f32tof21(f) } }
pub fn f21tof32(h: u32) -> f32 { unsafe { ts_f21tof32(h) } }
pub fn f32tof24(f: f32) -> u32 { unsafe { ts_f32tof24(f) } }
pub fn f24tof32(h: u32) -> f32 { unsafe { ts_f24tof32(h) } }

/*
 */
extern "C" {
	fn ts_f32tof16(f: f32) -> u16;
	fn ts_f16tof32(h: u16) -> f32;
	fn ts_f32tof21(f: f32) -> u32;
	fn ts_f21tof32(h: u32) -> f32;
	fn ts_f32tof24(f: f32) -> u32;
	fn ts_f24tof32(h: u32) -> f32;
}

/*****************************************************************************\
 *
 * Operators
 *
\*****************************************************************************/

/*
 */
#[macro_export]
macro_rules! declare_op {
	($type:ty, $arg:ty, $ret:ty, $trait:ident, $name:ident, $func:ident) => {
		impl ops::$trait<$arg> for $type {
			type Output = $ret;
			fn $name(self, arg: $arg) -> $ret {
				let mut ret = <$ret>::default();
				unsafe { $func(&mut ret, &self, &arg); }
				ret
			}
		}
		impl ops::$trait<&$arg> for $type {
			type Output = $ret;
			fn $name(self, arg: &$arg) -> $ret {
				let mut ret = <$ret>::default();
				unsafe { $func(&mut ret, &self, arg); }
				ret
			}
		}
		impl ops::$trait<$arg> for &$type {
			type Output = $ret;
			fn $name(self, arg: $arg) -> $ret {
				let mut ret = <$ret>::default();
				unsafe { $func(&mut ret, self, &arg); }
				ret
			}
		}
		impl ops::$trait<&$arg> for &$type {
			type Output = $ret;
			fn $name(self, arg: &$arg) -> $ret {
				let mut ret = <$ret>::default();
				unsafe { $func(&mut ret, self, arg); }
				ret
			}
		}
	}
}

/*
 */
#[macro_export]
macro_rules! declare_neg_op {
	($type:ty, $func:ident) => {
		impl ops::Neg for $type {
			type Output = $type;
			fn neg(self) -> $type {
				let mut ret = <$type>::default();
				unsafe { $func(&mut ret, &self); }
				ret
			}
		}
		impl ops::Neg for &$type {
			type Output = $type;
			fn neg(self) -> $type {
				let mut ret = <$type>::default();
				unsafe { $func(&mut ret, self); }
				ret
			}
		}
	}
}

/*
 */
#[macro_export]
macro_rules! declare_scalar_op {
	($type:ty, $arg:ty, $trait:ident, $name:ident, $func:ident) => {
		impl ops::$trait<$arg> for $type {
			type Output = $type;
			fn $name(self, v1: $arg) -> $type {
				let mut ret = <$type>::default();
				unsafe { $func(&mut ret, &self, v1); }
				ret
			}
		}
		impl ops::$trait<$arg> for &$type {
			type Output = $type;
			fn $name(self, v1: $arg) -> $type {
				let mut ret = <$type>::default();
				unsafe { $func(&mut ret, self, v1); }
				ret
			}
		}
	}
}

/*
 */
#[macro_export]
macro_rules! declare_vector_op {
	($type:ty, $trait:ident, $name:ident, $func:ident) => {
		super::declare_op!($type, $type, $type, $trait, $name, $func);
	}
}

/*****************************************************************************\
 *
 * Vector2i
 *
\*****************************************************************************/

/*
 */
#[repr(C)]
#[derive(Copy, Clone, Default)]
pub struct Vector2i {
	pub x: i32,
	pub y: i32,
}

/*
 */
impl Vector2i {
	
	pub fn new_s(v: i32) -> Vector2i {
		Vector2i { x: v, y: v }
	}
	pub fn new_v2u(v: &Vector2u) -> Vector2i {
		Vector2i { x: v.x as i32, y: v.y as i32 }
	}
	pub fn new_v2f(v: &Vector2f) -> Vector2i {
		Vector2i { x: v.x as i32, y: v.y as i32 }
	}
	pub fn new_v2d(v: &Vector2d) -> Vector2i {
		Vector2i { x: v.x as i32, y: v.y as i32 }
	}
	pub fn new_v3(v: &Vector3i) -> Vector2i {
		Vector2i { x: v.x, y: v.y }
	}
	pub fn new_v4(v: &Vector4i) -> Vector2i {
		Vector2i { x: v.x, y: v.y }
	}
	pub fn new(x: i32, y: i32) -> Vector2i {
		Vector2i { x: x, y: y }
	}
	pub fn new_a(v: &[i32]) -> Vector2i {
		Vector2i { x: v[0], y: v[1] }
	}
	
	pub fn abs(&self) -> Vector2i {
		let mut ret = Vector2i::default();
		unsafe { tsVector2i_abs(&mut ret, self); }
		ret
	}
	
	pub fn min(v0: &Vector2i, v1: &Vector2i) -> Vector2i {
		let mut ret = Vector2i::default();
		unsafe { tsVector2i_min(&mut ret, v0, v1); }
		ret
	}
	pub fn max(v0: &Vector2i, v1: &Vector2i) -> Vector2i {
		let mut ret = Vector2i::default();
		unsafe { tsVector2i_max(&mut ret, v0, v1); }
		ret
	}
	pub fn clamp(&self, v0: &Vector2i, v1: &Vector2i) -> Vector2i {
		let mut ret = Vector2i::default();
		unsafe { tsVector2i_clamp(&mut ret, self, v0, v1); }
		ret
	}
	
	pub fn zero() -> Vector2i {
		Vector2i { x: 0, y: 0 }
	}
	pub fn one() -> Vector2i {
		Vector2i { x: 1, y: 1 }
	}
}

/*
 */
impl fmt::Display for Vector2i {
	fn fmt(&self, f: &mut fmt::Formatter) -> fmt::Result {
		write!(f, "({0} {1})", self.x, self.y)
	}
}

/*
 */
declare_neg_op!(Vector2i, tsVector2i_neg);

/*
 */
declare_scalar_op!(Vector2i, i32, Mul, mul, tsVector2i_mul1);
declare_scalar_op!(Vector2i, i32, Div, div, tsVector2i_div1);
declare_scalar_op!(Vector2i, i32, Add, add, tsVector2i_add1);
declare_scalar_op!(Vector2i, i32, Sub, sub, tsVector2i_sub1);
declare_scalar_op!(Vector2i, i32, BitAnd, bitand, tsVector2i_and1);
declare_scalar_op!(Vector2i, i32, BitOr,  bitor,  tsVector2i_or1);
declare_scalar_op!(Vector2i, i32, BitXor, bitxor, tsVector2i_xor1);
declare_scalar_op!(Vector2i, i32, Shl, shl, tsVector2i_shl1);
declare_scalar_op!(Vector2i, i32, Shr, shr, tsVector2i_shr1);

/*
 */
declare_vector_op!(Vector2i, Mul, mul, tsVector2i_mul);
declare_vector_op!(Vector2i, Div, div, tsVector2i_div);
declare_vector_op!(Vector2i, Add, add, tsVector2i_add);
declare_vector_op!(Vector2i, Sub, sub, tsVector2i_sub);
declare_vector_op!(Vector2i, BitAnd, bitand, tsVector2i_and);
declare_vector_op!(Vector2i, BitOr,  bitor,  tsVector2i_or);
declare_vector_op!(Vector2i, BitXor, bitxor, tsVector2i_xor);
